[package]
name = "axum-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "=0.6.10"
reqwest = { version = "=0.11", features = ["json"] }
tokio = { version = "=1.26.0", features = ["full"] }
serde = {version = "=1.0.155", features = ["derive"] }
tracing-subscriber = "=0.3.16"
tracing = "=0.1.37"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
